fixed scrolling on mobile

--- a/main.css
+++ b/main.css
@@ -6,6 +6,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
+  /* overflow: scroll; */
+  -webkit-overflow-scrolling: touch;
 }
 html {
   overflow-x: hidden;
@@ -14,7 +16,8 @@ html {
 
 body {
   font-family: "Lato", sans-serif;
-  overflow-x: hidden;
+  /* overflow-x: hidden;
+  height:100%; */
 }
 
 /* #section1 h1, h2, button, a {
